--- a/about.html
+++ b/about.html
@@ -7,22 +7,22 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Choix De Tech &mdash; Votre guide pour le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones.</title>
+	<title>Choix De Tech &mdash; Votre guide pour le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones en Afrique.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones." />
-	<meta name="keywords" content="afrique, cameroun, gabon, chad, tchad, congo, nigeria, niger, rca, imprimantes 3D, scanners 3D, casques VR, lunettes AR, drones, ecommerce, guide, conseil, formation, comparatif, achat, vente, location, africa, cameroon, 3D printer, 3D scanner, VR headset, AR glasses" />
+	<meta name="description" content="Le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones en Afrique." />
+	<meta name="keywords" content="afrique, cameroun, gabon, chad, tchad, congo, nigeria, niger, rca, imprimantes 3D, scanners 3D, casques VR, lunettes AR, drones, ecommerce, guide, réalité virtuelle, réalité augmentée, VR, RV, AR, drone, maker, conseil, formation, comparatif, achat, vente, location, africa, cameroon, 3D printer, 3D scanner, VR headset, AR glasses" />
 	<meta name="author" content="Choix De Tech" />
 
   <!-- 
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	HTML5 WEBSITE 
 	DESIGNED & DEVELOPED by Choix De Tech
 		
 	Website: 		http://Choix De Tech/
 	Email: 			info@Choix De Tech
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	Twitter: 		http://twitter.com/
+	Facebook: 		https://www.facebook.com/
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -65,7 +65,7 @@
 		<a href="#" class="fh5co-close-offcanvas js-fh5co-close-offcanvas"><span><i class="icon-cross3"></i> <span>Close</span></span></a>
 		<div class="fh5co-bio">
 			<figure>
-				<img src="images/person1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+				<img src="images/logo.jpg" alt="Choix De Tech" class="img-responsive">
 			</figure>
 			<h3 class="heading">About US</h3>
 			<h2>Notre mission</h2>
@@ -161,7 +161,7 @@
 					<div class="row rp-b">
 						<div class="col-lg-6 col-md-12 animate-box">
 							<figure>
-								<img src="images/pic_1.jpg" alt="Free HTML5 Bootstrap Template by Choix De Tech" class="img-responsive">
+								<img src="images/pic_1.jpg" alt="Choix De Tech by Choix De Tech" class="img-responsive">
 								<figcaption>This is a sweet image caption. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</figcaption>
 							</figure>
 						</div>
@@ -177,7 +177,7 @@
 					<div class="row rp-b">
 						<div class="col-lg-6 col-lg-push-6 col-md-12 col-md-push-0 animate-box">
 							<figure>
-								<img src="images/pic_4.jpg" alt="Free HTML5 Bootstrap Template by Choix De Tech" class="img-responsive">
+								<img src="images/pic_4.jpg" alt="Choix De Tech by Choix De Tech" class="img-responsive">
 								<figcaption>This is a sweet image caption. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</figcaption>
 							</figure>
 						</div>
@@ -198,19 +198,19 @@
 						</div>
 						<div class="col-md-4 animate-box">
 							<figure>
-								<img src="images/pic_5.jpg" alt="Free HTML5 Bootstrap Template by Choix De Tech" class="img-responsive">
+								<img src="images/pic_5.jpg" alt="Choix De Tech by Choix De Tech" class="img-responsive">
 								<figcaption>This is a sweet image caption. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</figcaption>
 							</figure>
 						</div>
 						<div class="col-md-4 animate-box">
 							<figure>
-								<img src="images/pic_6.jpg" alt="Free HTML5 Bootstrap Template by Choix De Tech" class="img-responsive">
+								<img src="images/pic_6.jpg" alt="Choix De Tech by Choix De Tech" class="img-responsive">
 								<figcaption>This is a sweet image caption. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</figcaption>
 							</figure>
 						</div>
 						<div class="col-md-4 animate-box">
 							<figure>
-								<img src="images/pic_7.jpg" alt="Free HTML5 Bootstrap Template by Choix De Tech" class="img-responsive">
+								<img src="images/pic_7.jpg" alt="Choix De Tech by Choix De Tech" class="img-responsive">
 								<figcaption>This is a sweet image caption. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</figcaption>
 							</figure>
 						</div>
