--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Choix De Tech &mdash; Votre guide pour le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones.</title>
+	<title>Choix De Tech &mdash; Votre guide et plateforme d'achat pour le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones en Afrique.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones." />
-	<meta name="keywords" content="afrique, cameroun, gabon, chad, tchad, congo, nigeria, niger, rca, imprimantes 3D, scanners 3D, casques VR, lunettes AR, drones, ecommerce, guide, conseil, formation, comparatif, achat, vente, location, africa, cameroon, 3D printer, 3D scanner, VR headset, AR glasses" />
+	<meta name="description" content="Le meilleur des imprimantes 3D, scanners 3D, casques VR, lunettes AR et drones en Afrique." />
+	<meta name="keywords" content="afrique, cameroun, gabon, chad, tchad, congo, nigeria, niger, rca, imprimantes 3D, scanners 3D, casques VR, lunettes AR, drones, ecommerce, guide, réalité virtuelle, drone, maker, réalité augmentée, VR, RV, AR, conseil, formation, comparatif, achat, vente, location, africa, cameroon, 3D printer, 3D scanner, VR headset, AR glasses" />
 	<meta name="author" content="Choix De Tech" />
 
   <!-- 
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	HTML5 WEBSITE 
 	DESIGNED & DEVELOPED by Choix De Tech
 		
 	Website: 		http://Choix De Tech/
 	Email: 			info@Choix De Tech
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	Twitter: 		http://twitter.com/
+	Facebook: 		https://www.facebook.com/
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -65,7 +65,7 @@
 		<a href="#" class="fh5co-close-offcanvas js-fh5co-close-offcanvas"><span><i class="icon-cross3"></i> <span>Close</span></span></a>
 		<div class="fh5co-bio">
 			<figure>
-				<img src="images/person1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+				<img src="images/logo.jpg" alt="Choix De Tech" class="img-responsive">
 			</figure>
 				<h3 class="heading">About US</h3>
 			<h2>Notre mission</h2>
@@ -124,7 +124,7 @@
 		<div class="row fh5co-post-entry">
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="Webnewtech.html"><img src="images/pic_1.jpg" alt="Image" class="img-responsive"></a>
+					<a href="Webnewtech.html"><img src="images/8182.jpg" alt="Image" class="img-responsive"></a>
 				</figure>
 				<span class="fh5co-meta"><a href="Webnewtech.html">Welcome &amp; About</a></span>
 				<h2 class="fh5co-article-title"><a href="Webnewtech.html">BIENVENUE SUR LE NOUVEAU SITE DEDIE AUX TECH D'AVENIR !
